[gd_scene load_steps=3 format=3 uid="uid://ddo47f38ulwyw"]

[ext_resource type="Script" uid="uid://bjuehg7w0pst4" path="res://Scripts/UI/Player/joystick.gd" id="1_0xws5"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ccjgu"]
radius = 50.0

[node name="Joystick" type="Node2D"]
script = ExtResource("1_0xws5")

[node name="TouchBtn" type="TouchScreenButton" parent="."]
unique_name_in_owner = true
shape = SubResource("CircleShape2D_ccjgu")
passby_press = true

[node name="InitPos" type="Marker2D" parent="."]
unique_name_in_owner = true
z_index = 1
gizmo_extents = 211.5

[connection signal="tree_exiting" from="." to="." method="_on_tree_exiting"]
[connection signal="pressed" from="TouchBtn" to="." method="_on_touch_btn_pressed"]
[connection signal="released" from="TouchBtn" to="." method="_on_touch_btn_released"]
